Fix for issue 11189: FindBugs (H) errors in GFv3 module : ejb.security
svn path=/trunk/; revision=34735


Former-commit-id: 8c4f57f77abdcfe6697233e37c941e539af485cc